Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,81 @@
 \documentclass{article}
+\usepackage{amsmath}
+\usepackage{fancyhdr}
+\usepackage[spanish]{babel}
 \usepackage[utf8]{inputenc}
+
+\selectlanguage{spanish}
+
+\parindent 0em
+\parskip 2ex
+\pagestyle{fancy}
+\setlength{\textfloatsep}{5pt}
+
 \begin{document}
-(Type your content here.)
+
+\begin{titlepage}
+\newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
+
+\center
+\textsc{\LARGE ITESO, Universidad Jesuita De Guadalajara}\\[2cm]
+\textsc{\Large INGENIERÍA FINANCIERA}\\[1cm]
+\textsc{\large Innovación y Gestión De Proyectos}\\[1cm]
+\HRule \\[2cm]
+{ \huge \bfseries Alto índice de accidentes viales en la ZMG}\\[2cm] 
+\HRule \\[2cm]
+\begin{minipage}{0.4\textwidth}
+\begin{flushleft} \large
+
+
+\emph{Authors:}\\
+Rodrigo \textsc{Hernández Mota}\\
+...
+\end{flushleft}
+\end{minipage}
+~
+\begin{minipage}{0.4\textwidth}
+\begin{flushright} \large
+\emph{Supervisor:} \\
+Mtra. Mireya \textsc{Pasillas Torres}
+\end{flushright}
+\end{minipage}\\[2cm]
+
+{\large \today}\\[1cm]
+
+\vfill
+ 
+\end{titlepage}
+\tableofcontents
+\newpage
+
+\section{Introducción} % ENTREGA: 2018-05-04
+[agregar contenido]
+
+\section{Diagnóstico} % ENTREGA: 2018-01-26 | 2018-02-02
+[agregar contenido]
+
+\section{Objetivos del proyecto} % ENTREGA: 2018-16-02
+[agregar contenido]
+
+\subsection{Objetivos general}
+[agregar contenido]
+
+\subsection{Objetivos específico}
+[agregar contenido]
+
+\section{Análisis de los participantes}
+[agregar contenido]
+
+\section{Alternativas de solución}
+[agregar contenido]
+
+\section{Elaboración de la MIR}
+[agregar contenido]
+
+\section{Conclusiones}
+[agregar contenido]
+
+\section{Bibliografía}
+[agregar contenido]
+
 \end{document}
