Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -21,13 +21,13 @@
 \textsc{\Large INGENIERÍA FINANCIERA}\\[1cm]
 \textsc{\large Innovación y Gestión De Proyectos}\\[1cm]
 \HRule \\[2cm]
-{ \huge \bfseries Alto índice de accidentes viales en la ZMG}\\[2cm] 
+{ \huge \bfseries Accidentes viales en la ZMG}\\[2cm] 
 \HRule \\[2cm]
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
 
 
-\emph{Authors:}\\
+\emph{Autores:}\\
 Rodrigo \textsc{Hernández Mota}\\
 ...
 \end{flushleft}
