--- a/main.tex
+++ b/main.tex
@@ -4,8 +4,6 @@
 \usepackage[spanish]{babel}
 \usepackage[utf8]{inputenc}
 
-\selectlanguage{spanish}
-
 \parindent 0em
 \parskip 2ex
 \pagestyle{fancy}
@@ -48,34 +46,34 @@ Mtra. Mireya \textsc{Pasillas Torres}
 \tableofcontents
 \newpage
 
-\section{Introducción} % ENTREGA: 2018-05-04
+\section{Introducción}\label{sec:into}
 [agregar contenido]
 
-\section{Diagnóstico} % ENTREGA: 2018-01-26 | 2018-02-02
+\section{Diagnóstico}\label{sec:diagnostic}
 [agregar contenido]
 
-\section{Objetivos del proyecto} % ENTREGA: 2018-16-02
+\section{Objetivos del proyecto}\label{sec:objs}
 [agregar contenido]
 
-\subsection{Objetivos general}
+\subsection{Objetivos general}\label{subsec:general-objs}
 [agregar contenido]
 
-\subsection{Objetivos específico}
+\subsection{Objetivos específico}\label{subsec:specific-objs}
 [agregar contenido]
 
-\section{Análisis de los participantes}
+\section{Análisis de los participantes}\label{sec:participants}
 [agregar contenido]
 
-\section{Alternativas de solución}
+\section{Alternativas de solución}\label{sec:alternatives}
 [agregar contenido]
 
-\section{Elaboración de la MIR}
+\section{Elaboración de la MIR}\label{sec:mir}
 [agregar contenido]
 
-\section{Conclusiones}
+\section{Conclusiones}\label{sec:conclutions}
 [agregar contenido]
 
-\section{Bibliografía}
+\section{Bibliografía}\label{sec:references}
 [agregar contenido]
 
 \end{document}
