Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,9 @@
 
 \emph{Autores:}\\
 Rodrigo \textsc{Hernández Mota}\\
+Nombre \textsc{Apellidos}\\
+Rodrigo \textsc{Hernández Mota}\\
+Rodrigo \textsc{Hernández Mota}\\
 ...
 \end{flushleft}
 \end{minipage}
