spaces for names

--- a/main.tex
+++ b/main.tex
@@ -28,9 +28,8 @@
 \emph{Autores:}\\
 Rodrigo \textsc{Hernández Mota}\\
 Nombre \textsc{Apellidos}\\
-Rodrigo \textsc{Hernández Mota}\\
-Rodrigo \textsc{Hernández Mota}\\
-...
+Nombre \textsc{Apellidos}\\
+Nombre \textsc{Apellidos}\\
 \end{flushleft}
 \end{minipage}
 ~
