Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -27,9 +27,9 @@
 
 \emph{Autores:}\\
 Rodrigo \textsc{Hernández Mota}\\
-Nombre \textsc{Apellidos}\\
-Nombre \textsc{Apellidos}\\
-Nombre \textsc{Apellidos}\\
+Ana Goretti \textsc{Chávez Flores}\\
+Alicia Karime \textsc{González Beltrán}\\
+José Felipe \textsc{}{Sanchez Andaluz}
 \end{flushleft}
 \end{minipage}
 ~
