add problem tree

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{amsmath}
+\usepackage{graphicx}
 \usepackage{fancyhdr}
 \usepackage[spanish]{babel}
 \usepackage[utf8]{inputenc}
@@ -52,6 +53,14 @@ Mtra. Mireya \textsc{Pasillas Torres}
 [agregar contenido]
 
 \section{Diagnóstico}\label{sec:diagnostic}
+
+[agregar contenido]
+
+	\begin{figure}[H]\centering
+	\includegraphics[width=0.8\textwidth]{resources/img/arbol_de_problemas.png}
+	\caption{\label{} Árbol de problemas}
+    \end{figure}
+
 [agregar contenido]
 
 \section{Objetivos del proyecto}\label{sec:objs}
