Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{amsmath}
 \usepackage{graphicx}
+\usepackage{float}
 \usepackage{fancyhdr}
 \usepackage[spanish]{babel}
 \usepackage[utf8]{inputenc}
@@ -27,17 +28,17 @@
 
 
 \emph{Autores:}\\
-Rodrigo \textsc{Hernández Mota}\\
-Ana Goretti \textsc{Chávez Flores}\\
-Alicia Karime \textsc{González Beltrán}\\
-José Felipe \textsc{}{Sanchez Andaluz}
+\small Alicia Karime González Beltrán\\
+\small Ana Goretti Chávez Flores\\
+\small Rodrigo Hernández Mota\\
+\small José Felipe Sánchez Andaluz
 \end{flushleft}
 \end{minipage}
 ~
 \begin{minipage}{0.4\textwidth}
 \begin{flushright} \large
 \emph{Supervisor:} \\
-Mtra. Mireya \textsc{Pasillas Torres}
+\small Mtra. Mireya \textsc{Pasillas Torres}
 \end{flushright}
 \end{minipage}\\[2cm]
 
@@ -57,7 +58,7 @@ Mtra. Mireya \textsc{Pasillas Torres}
 [agregar contenido]
 
 	\begin{figure}[H]\centering
-	\includegraphics[width=0.8\textwidth]{resources/img/arbol_de_problemas.png}
+	\includegraphics[width=1.2\textwidth]{resources/img/arbol_de_problemas.png}
 	\caption{\label{} Árbol de problemas}
     \end{figure}
 
