--- a/main.tex
+++ b/main.tex
@@ -55,11 +55,14 @@
 
 \section{Diagnóstico}\label{sec:diagnostic}
 
-[agregar contenido]
+Datos provenientes de la Secretaría de Movilidad de Jalisco señalan que en 2013 
+
+Como parte del estudio se plantea un árbol de problemas (véase Figura \ref{fig:arbol}) con el fin de identificar las causas y consecuencias que desencadena el tema del presente. 
+
 
 	\begin{figure}[H]\centering
-	\includegraphics[width=1\textwidth]{resources/img/arbol_de_problemas.png}
-	\caption{\label{} Árbol de problemas}
+	\includegraphics[width=1.25\textwidth]{resources/img/diagrama.png}
+	\caption{\label{fig:arbol} Árbol de problemas}
     \end{figure}
 
 [agregar contenido]
