--- a/main.tex
+++ b/main.tex
@@ -61,7 +61,7 @@ Como parte del estudio se plantea un árbol de problemas (véase Figura \ref{fig
 
 
 	\begin{figure}[H]\centering
-	\includegraphics[width=1.25\textwidth]{resources/img/diagrama.png}
+	\includegraphics[width=1.25\textwidth]{resources/img/arbol_de_problemas.png}
 	\caption{\label{fig:arbol} Árbol de problemas}
     \end{figure}
 
