Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -55,7 +55,12 @@
 
 \section{Diagnóstico}\label{sec:diagnostic}
 
-Datos provenientes de la Secretaría de Movilidad de Jalisco señalan que en 2013 
+Datos provenientes de la Secretaría de Movilidad de Jalisco (SEMOV) señalan que en 2016 se generaron más de \textbf{23,753 accidentes viales} dentro de la zona metropolitana de guadalajara (ZMG). Esta cifra corresponde al 93\% de todos los accidentes viales de todo el estado. Aunado a esto, el INEGI reporta 3,429,847 vehículos en circulación en el estado durante este mismo año. Esto significa que de cada 1000 vehículos se generaron 7 accidentes viales en promedio. 
+
+Es imperativo señalar que los accidentes automovilísticos se caracterizan por provocar fuertes repercusiones económicas para los involucrados. No obstante, cifras publicadas por la Asociación Mexicana de Instituciones de Seguros (AMIS) indican que solo el 27\% del parque vehicular en México está asegurado.
+
+
+
 
 Como parte del estudio se plantea un árbol de problemas (véase Figura \ref{fig:arbol}) con el fin de identificar las causas y consecuencias que desencadena el tema del presente. 
 
