Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -101,13 +101,13 @@ categorías de lesionados involucrados, muertes total, y muertes en lugar de acc
 Aunque el número total de accidentes ha disminuido en forma significativa,
 no todos los niveles de segregación que lo conforman presentan una disminución.
 Adquiere relevance identificar en qué segmentos la actual política de SEMOV presenta
-resultados deseables y aquellos cuya situación es inmune a estas políticas.
+resultados deseables y aquellos cuya situación es inmune a estas.
 En este caso, se puede observar que el número de muertes en el lugar del accidente
 vial ha incrementado de forma alarmante. Las causas de esto pueden variar desde
-velocidad de reacción de servicios médicos, condiciones del impacto, muerte instantanea,
+velocidad de reacción de servicios médicos, condiciones del impacto, muerte instantánea,
 etc.
 
-Una auditoría sobre la seguridad vial en la ZMG realizada por la SEMOV en colaboración con la Universidad de Guadalajara
+Una auditoria sobre la seguridad vial en la ZMG realizada por la SEMOV en colaboración con la Universidad de Guadalajara
 identifican que entre los problemas de seguridad relevantes se encuentran:
 
 	\begin{itemize}
@@ -134,7 +134,7 @@ Por otra parte, la SEMOV en su reporte "Zonas de Riesgo" clasifica las causas de
 	\end{itemize}
 
 
-Este estudio prone el siguiente árbol de problemas (véase Figura \ref{fig:arbol}) con el fin de identificar las causas y consecuencias que desencadena el tema del presente de forma precisa.
+Este estudio propone el siguiente árbol de problemas (véase Figura \ref{fig:arbol}) con el fin de identificar las causas y consecuencias que desencadena el tema del presente de forma precisa.
 
 
 	\begin{figure}[H]\centering
