Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,9 @@
 \pagestyle{fancy}
 \setlength{\textfloatsep}{5pt}
 
+\newcommand{\forceindent}{\leavevmode{\parindent=1em\indent}}
+
+
 \begin{document}
 
 \begin{titlepage}
@@ -144,13 +147,25 @@ Este estudio propone el siguiente árbol de problemas (véase Figura \ref{fig:ar
 
 \newpage
 \section{Objetivos del proyecto}\label{sec:objs}
-[agregar contenido]
+
+En esta sección se presentan los objetivos del proyecto usando como base el árbol de problemas (figura \ref{fig:arbol}). 
 
 \subsection{Objetivos general}\label{subsec:general-objs}
 [agregar contenido]
 
+\forceindent \textit{Mejorar [...] mediante [...].}
+
+[agregar contenido]
+
+
 \subsection{Objetivos específico}\label{subsec:specific-objs}
 [agregar contenido]
+
+% * <rohdzmota@gmail.com> 2018-02-03T00:26:12.944Z:
+% 
+% Los objetivos comienzan con verbos. Están en la parte inferior del árbol. 
+% 
+% ^.
 
 \newpage
 \section{Análisis de los participantes}\label{sec:participants}
