Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -148,7 +148,9 @@ Este estudio propone el siguiente árbol de problemas (véase Figura \ref{fig:ar
 \newpage
 \section{Objetivos del proyecto}\label{sec:objs}
 
-En esta sección se presentan los objetivos del proyecto usando como base el árbol de problemas (figura \ref{fig:arbol}). 
+En esta sección se presentan los objetivos del proyecto usando como base el árbol de problemas (figura \ref{fig:arbol}) para generar un árbol de objetivos cuyo propósito es proponer las soluciones atendiendo particularmente la estructura de la problemática.
+
+[agregar árbol de objetivos]
 
 \subsection{Objetivos general}\label{subsec:general-objs}
 [agregar contenido]
