Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
 \usepackage[justification=centering]{caption}
 \usepackage[font={small}]{caption}
 
+\setlength{\headheight}{15pt}
 \parindent 0em
 \parskip 2ex
 \pagestyle{fancy}
@@ -88,7 +89,7 @@ en donde el efecto más significativo se puede apreciar en el último año de la
 
 	\begin{figure}[H]\centering
 	\includegraphics[width=0.60\textwidth]{resources/img/muertos_alcohol_img.png}
-	\caption{\label{fig:accidentes_general_img} Número de muertes por consumo de bebidas alcoholicas dentro de la zona metropolitana de Guadalajara. Fuente: adaptación de datos de SEMOV.}
+	\caption{\label{fig:muertes_img} Número de muertes por consumo de bebidas alcoholicas dentro de la zona metropolitana de Guadalajara. Fuente: adaptación de datos de SEMOV.}
     \end{figure}
 
 
@@ -153,11 +154,11 @@ En esta sección se presentan los objetivos del proyecto usando como base el ár
 [agregar árbol de objetivos]
 
 \subsection{Objetivos general}\label{subsec:general-objs}
-[agregar contenido]
+Analizar la relación que existe entre los accidentes automovilísticos en la zona metropolitana de Guadalajara, sus causas y efectos. También las posibilidades que existen de prevención mediante políticas públicas que impacten de manera positiva y beneficien a la sociedad. Asimismo, se propone la evaluación de datos verídicos que nos permitan detectar fenómenos sociales y a su vez, poder plantear una solución que sea benefactora para los locatarios de la comunidad, además de poder cumplir el objetivo de salvar vidas y poder contribuir al problema de tráfico vial.
 
 \forceindent \textit{Mejorar [...] mediante [...].}
 
-[agregar contenido]
+[Agregar contenido]
 
 
 \subsection{Objetivos específico}\label{subsec:specific-objs}
