--- a/main.tex
+++ b/main.tex
@@ -62,7 +62,12 @@
 \newpage
 \section{Diagnóstico}\label{sec:diagnostic}
 
-Datos provenientes de la Secretaría de Movilidad de Jalisco (SEMOV) señalan que en 2016 se generaron más de \textbf{23,753 accidentes viales} dentro de la zona metropolitana de guadalajara (ZMG). Esta cifra corresponde al 93\% de todos los accidentes viales de todo el estado. Aunado a esto, el INEGI reporta 3,429,847 vehículos en circulación en el estado durante este mismo año. Esto significa que de cada 1000 vehículos se generaron 7 accidentes viales en promedio. 
+Datos provenientes de la Secretaría de Movilidad de Jalisco (SEMOV) señalan que en 2016 se generaron
+más de \textbf{23,753 accidentes viales} dentro de la zona metropolitana de
+guadalajara (ZMG). Esta cifra corresponde al 93\% de todos los accidentes
+viales de todo el estado. Aunado a esto, el INEGI reporta 3,429,847
+vehículos en circulación en el estado durante este mismo año. Esto significa que de cada 1000 vehículos
+se generaron 7 accidentes viales en promedio.
 
 
 Es imperativo señalar que los accidentes automovilísticos se caracterizan por provocar fuertes
@@ -149,20 +154,42 @@ Este estudio propone el siguiente árbol de problemas (véase Figura \ref{fig:ar
 \newpage
 \section{Objetivos del proyecto}\label{sec:objs}
 
-En esta sección se presentan los objetivos del proyecto usando como base el árbol de problemas (figura \ref{fig:arbol}) para generar un árbol de objetivos cuyo propósito es proponer las soluciones atendiendo particularmente la estructura de la problemática.
+En esta sección se plantean los objetivos del proyecto usando como base el
+árbol de problemas (figura \ref{fig:arbol}). Para atender la estrctura de los problemas
+presentados previamente, se genera de forma análoga un árbol de objetivos (vease figura ---).
+Bajo esta metodología podemos guarantizar que el planteamiento de soluciones está alineado a la identificación
+de problemáticas de forma directa.
+
 
 [agregar árbol de objetivos]
 
+
 \subsection{Objetivos general}\label{subsec:general-objs}
-Analizar la relación que existe entre los accidentes automovilísticos en la zona metropolitana de Guadalajara, sus causas y efectos. También las posibilidades que existen de prevención mediante políticas públicas que impacten de manera positiva y beneficien a la sociedad. Asimismo, se propone la evaluación de datos verídicos que nos permitan detectar fenómenos sociales y a su vez, poder plantear una solución que sea benefactora para los locatarios de la comunidad, además de poder cumplir el objetivo de salvar vidas y poder contribuir al problema de tráfico vial.
 
-\forceindent \textit{Mejorar [...] mediante [...].}
+Usando como referencia el árbol de objetivos (vease ...) de la sección anterior, podemos plantear el objectivo general
+de la siguiente forma:
 
-[Agregar contenido]
+\forceindent \textit{Reducir la taza de accidentes viales mediante el análisis de información relevante y selección de políticas públicas adecuadas.}
+
+
+Con este objetivo se pretente analizar la relación que existe entre los accidentes automovilísticos en la zona metropolitana de Guadalajara,
+sus causas y efectos. También las posibilidades que existen de prevención mediante políticas
+públicas que impacten de manera positiva y beneficien a la sociedad. Asimismo,
+se propone la evaluación de datos verídicos que nos permitan detectar fenómenos sociales y a su vez,
+poder plantear una solución que sea benefactora para los locatarios de la comunidad, además de poder cumplir el
+objetivo de salvar vidas y poder contribuir al problema de tráfico vial.
 
 
 \subsection{Objetivos específico}\label{subsec:specific-objs}
-[agregar contenido]
+
+Entre los objetivos específicos evidenciados por la parte inferior del árbol de objetivos (vease figura ...)
+destacan los siguientes:
+
+\forceindent \textit{agregar objetivo}
+
+\forceindent \textit{agregar objetivo}
+
+\forceindent \textit{agregar objetivo}
 
 % * <rohdzmota@gmail.com> 2018-02-03T00:26:12.944Z:
 % 
@@ -172,7 +199,8 @@ Analizar la relación que existe entre los accidentes automovilísticos en la zo
 
 \newpage
 \section{Análisis de los participantes}\label{sec:participants}
-[agregar contenido]
+
+
 
 \newpage
 \section{Alternativas de solución}\label{sec:alternatives}
