Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -63,8 +63,8 @@
 \section{Diagnóstico}\label{sec:diagnostic}
 
 Datos provenientes de la Secretaría de Movilidad de Jalisco (SEMOV) señalan que en 2016 se generaron
-más de \textbf{23,753 accidentes viales} dentro de la zona metropolitana de
-guadalajara (ZMG). Esta cifra corresponde al 93\% de todos los accidentes
+más de \textbf{23,753 accidentes viales} dentro de la Zona Metropolitana de
+Guadalajara (ZMG). Esta cifra corresponde al 93\% de todos los accidentes
 viales de todo el estado. Aunado a esto, el INEGI reporta 3,429,847
 vehículos en circulación en el estado durante este mismo año. Esto significa que de cada 1000 vehículos
 se generaron 7 accidentes viales en promedio.
@@ -76,7 +76,7 @@ Asociación Mexicana de Instituciones de Seguros (AMIS) indican que solo el 27\%
 México está asegurado. Esto representa un fuerte riesgo financiero potencial para la población con
 vehículo en circulación.
 
-El estado de Jalisco, reconociendo la importancia de atender este problema,
+El Estado de Jalisco, reconociendo la importancia de atender este problema,
 ha realizado acciones para disminuir el número de accidentes viales.
 Las políticas y soluciones que se han implementado muestran un efecto deseable en el cual
 se percibe un decrecimiento real en el número de accidentes (dado que el parque vehicular ha aumentado
@@ -109,7 +109,7 @@ categorías de lesionados involucrados, muertes total, y muertes en lugar de acc
 
 Aunque el número total de accidentes ha disminuido en forma significativa,
 no todos los niveles de segregación que lo conforman presentan una disminución.
-Adquiere relevance identificar en qué segmentos la actual política de SEMOV presenta
+Adquiere relevancia identificar en qué segmentos la actual política de SEMOV presenta
 resultados deseables y aquellos cuya situación es inmune a estas.
 En este caso, se puede observar que el número de muertes en el lugar del accidente
 vial ha incrementado de forma alarmante. Las causas de esto pueden variar desde
@@ -147,64 +147,125 @@ Este estudio propone el siguiente árbol de problemas (véase Figura \ref{fig:ar
 
 
 	\begin{figure}[H]\centering
-	\includegraphics[width=1.4\textwidth]{resources/img/arbol_de_problemas.png}
-	\caption{\label{fig:arbol} Árbol de problemas}
+	\includegraphics[width=1\textwidth]{resources/img/arbol_de_problemas.png}
+	\caption{\label{fig:arbol} Árbol de problemas. Fuente: Elaboración propia.}
     \end{figure}
+
+Las consecuencias que conlleva el problema de los accidentes automovilísticos en una zona tan transitada como lo es la Zona Metropolitana de Guadalajara van desde, daños menores como podrían ser los embotellamientos que impiden la fluidez vehicular y que a su vez ocasionan pérdidas menores temporales como son los retrasos y las pérdidas de tiempo de los conductores, lesiones emotivo-psíquicas y estrés, daños a los señalamientos, calles, áreas públicas o bien lleva a daños aún más graves como lo es la muerte. Efectos que llevan a la población a una disminución de su calidad de vida.
 
 \newpage
 \section{Objetivos del proyecto}\label{sec:objs}
 
 En esta sección se plantean los objetivos del proyecto usando como base el
-árbol de problemas (figura \ref{fig:arbol}). Para atender la estrctura de los problemas
-presentados previamente, se genera de forma análoga un árbol de objetivos (vease figura ---).
-Bajo esta metodología podemos guarantizar que el planteamiento de soluciones está alineado a la identificación
-de problemáticas de forma directa.
+árbol de problemas (figura \ref{fig:arbol}). La intención en usar este árbol para generar
+de forma análoga un árbol de objetivos. Esta metodología nos permite garantizar que
+el planteamiento de los objetivos y soluciones está completamente alineado a la identificación
+de los problemas. 
+
+	\begin{figure}[H]\centering
+	\includegraphics[width=1\textwidth]{resources/img/arbol_de_objetivos.png}
+	\caption{\label{fig:arbol_obj} Árbol de objetivos. Fuente: Elaboración propia}
+    \end{figure}
 
 
-[agregar árbol de objetivos]
+\subsection{Objetivo general}\label{subsec:general-objs}
 
+Usando como referencia el árbol de objetivos (figura \ref{fig:arbol_obj}) presentado anteriormente, se propone el siguiente objetivo general:
 
-\subsection{Objetivos general}\label{subsec:general-objs}
+\forceindent \textit{Mejorar la calidad de vida de los ciudadanos a través de la disminución de accidentes automovilísticos en la
+Zona Metropolitana de Guadalajara.}
 
-Usando como referencia el árbol de objetivos (vease ...) de la sección anterior, podemos plantear el objectivo general
-de la siguiente forma:
+El componente medular de este objetivo reconoce que parte del bienestar social es afectado directamente por los accidentes automovilísticos. Este problema tiene el potencial de agravarse sustancialmente con el crecimiento urbano de la ZMG si no se toman las medidas y políticas adecuadas. En este sentido, se pretende analizar información pública disponible para encontrar la relación entre los accidentes viales y las acciones que se pueden llevar a cabo de forma preventiva. Entre estas acciones se identifican políticas públicas y programas sociales con la intención de generar un impacto positivo y benéfico para la sociedad. 
 
-\forceindent \textit{Reducir la taza de accidentes viales mediante el análisis de información relevante y selección de políticas públicas adecuadas.}
+Actualmente se tiene evidencia de casos de éxito respecto a programas sociales que pretenden reducir los accidentes viales de una causa en particular. Dentro de estos casos, destaca el programa de "Salvando Vidas", coordinado por la Secretaría de Movilidad, en donde se atiende de forma exclusiva el consumo de alcohol indebido por conductores de vehículos.
 
+\subsection{Objetivo específico}\label{subsec:specific-objs}
 
-Con este objetivo se pretente analizar la relación que existe entre los accidentes automovilísticos en la zona metropolitana de Guadalajara,
-sus causas y efectos. También las posibilidades que existen de prevención mediante políticas
-públicas que impacten de manera positiva y beneficien a la sociedad. Asimismo,
-se propone la evaluación de datos verídicos que nos permitan detectar fenómenos sociales y a su vez,
-poder plantear una solución que sea benefactora para los locatarios de la comunidad, además de poder cumplir el
-objetivo de salvar vidas y poder contribuir al problema de tráfico vial.
+Se propone el siguiente objetivo específico:
 
+\forceindent \textit{Disminuir el número de accidentes automovilísticos en la Zona Metropolitana de Guadalajara mediante un esquema de incentivos orientado al uso apropiado del celular.}
 
-\subsection{Objetivos específico}\label{subsec:specific-objs}
+Este objetivo se deriva directamente de la parte inferior del árbol en la figura \ref{fig:arbol_obj}. La intención es atender de forma particular y precisa una de las causas más relevantes de la problemática. Esto con el afán de generar un impacto de alto grado y contribuir de una forma más significativa al objetivo general. En particular, se seleccionó este objetivo específico puesto que el uso inadecuado de tecnología celular en zonas urbanas ha presentado una tendencia alcista alarmante.
 
-Entre los objetivos específicos evidenciados por la parte inferior del árbol de objetivos (vease figura ...)
-destacan los siguientes:
-
-\forceindent \textit{agregar objetivo}
-
-\forceindent \textit{agregar objetivo}
-
-\forceindent \textit{agregar objetivo}
-
-% * <rohdzmota@gmail.com> 2018-02-03T00:26:12.944Z:
-% 
-% Los objetivos comienzan con verbos. Están en la parte inferior del árbol. 
-% 
-% ^.
 
 \newpage
 \section{Análisis de los participantes}\label{sec:participants}
 
+El alcance de este documento se limita a la Zona Metropolitana de Guadalajara. Tal zona está integrada por varios municipios, los cuales conforman el área urbana en su conjunto y comparten infraestructura relevante. Los incidentes viales afectan a la "zona urbana" de forma agregada; por esta razón la problemática a tratar trasciende al orden de gobierno municipal. En este sentido, el siguiente orden de gobierno inmediato es el Estado de Jalisco, en el cual se identifican varios participantes. Por otra parte, la naturaleza del problema tiene una orientación publica significativa. En este caso los ciudadanos pertenecientes a la ZMG están involucrados de forma directa. 
 
+En la siguiente tabla se desglosan los participantes:
+
+\begin{table}[H]\centering
+\begin{tabular}{l r}
+\hline
+Participantes & Competencia \\
+\hline\hline
+Secretaría de Movilidad & Estatal \\
+Instituto de Movilidad y Transporte & Estatal \\
+Secretaría de Infraestructura y Obra Pública & Estatal \\
+Secretaría de Planeación y Administración Financiera & Estatal\\
+Ciudadanos & Público \\
+
+\hline
+\end{tabular}
+\end{table}
+
+\subsection[SEMOV]{Secretaría de Movilidad del Estado de Jalisco}\label{subsec:semov}
+
+La Secretaría de Movilidad (SEMOV) es la autoridad en materia de tránsito y vialidad del Estado de Jalisco. Son los encargados de la seguridad y calidad en el desplazamiento de vehículos dentro de la entidad. 
+
+\subsection[IMTJ]{Instituto de Movilidad y Transporte del Estado de Jalisco}\label{subsec:imtj}
+
+El Instituto de Movilidad y Transporte es un organismo público y descentralizado del Estado de Jalisco con el objetivo principal de promover la movilidad sustentable. Este instituto se encarga de proponer e implementar actividades para eficientar el transporte. Tiene la facultad de emitir opinión técnica a la SEMOV. 
+
+\subsection[SIOP]{Secretaría de Infraestructura y Obra Pública del Estado de Jalisco}\label{subsec:siop}
+
+La Secretaría de Infraestructura y Obra Pública (SIOP) se encarga del desarrollo, proyección y construcción de obras públicas en el Estado de Jalisco. 
+
+\subsection[SEPAF]{Secretaría de Planeacion y Administracion Financiera de Jalisco}\label{subsec:sepaf}
+La Secretaria de Planeacion y Administración Financiera (SEPAF) es responsable de garantizar que se destinen los bienes y recursos estatales a las acciones que son prioridades en la planeación y desarrollo del estado. 
 
 \newpage
+
 \section{Alternativas de solución}\label{sec:alternatives}
-[agregar contenido]
+[Esta sección es la más larga y
+laboriosa del proyecto. Dependiendo
+del proyecto, se evaluarán 1 o 2
+alternativas de solución. 
+% * <rohdzmota@gmail.com> 2018-02-17T00:23:06.435Z:
+% 
+% Definir un indicador para el problema central y 3 indicadores para el específico.
+% Considerar efectos quantificables: 
+% * vidas salvadas (monetización)
+% * costo promedio de siniestros (personales, infraestructuras, tiempo en embotellamiento)
+% * numero de colisiones
+% * indicador respecto a población afectada. 
+% ^.
+
+\subsection{Metodologías}
+
+\subsection{Situación actual}
+En esta subsección se cuantifica la
+situación sin proyecto, con base en la
+problemática identificada. Es
+cuantitativa.
+\subsection{Situación con proyecto}
+
+\subsection{Análisis Costo-Beneficio}
+% * <rohdzmota@gmail.com> 2018-02-17T00:17:19.479Z:
+% 
+% Beneficios - Costos > 0  -- rentable, TIR
+% 
+% ^.
+
+\subsection{Simulación Montecarlo y Análisis de Sensibilidad}
+
+\subsection{Resultados}
+% * <rohdzmota@gmail.com> 2018-02-17T00:16:37.605Z:
+% 
+% Concluir si el proyecto es rentable o no
+% 
+% ^.
 
 \newpage
 \section{Elaboración de la MIR}\label{sec:mir}
