Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -94,7 +94,7 @@ en donde el efecto más significativo se puede apreciar en el último año de la
 
 	\begin{figure}[H]\centering
 	\includegraphics[width=0.60\textwidth]{resources/img/muertos_alcohol_img.png}
-	\caption{\label{fig:muertes_img} Número de muertes por consumo de bebidas alcoholicas dentro de la zona metropolitana de Guadalajara. Fuente: adaptación de datos de SEMOV.}
+	\caption{\label{fig:muertes_img} Número de muertes por consumo de bebidas alcohólicas dentro de la zona metropolitana de Guadalajara. Fuente: adaptación de datos de SEMOV.}
     \end{figure}
 
 
