--- a/main.tex
+++ b/main.tex
@@ -244,12 +244,52 @@ alternativas de solución.
 
 \subsection{Metodologías}
 
-\subsection{Situación actual}
-En esta subsección se cuantifica la
-situación sin proyecto, con base en la
-problemática identificada. Es
-cuantitativa.
+\subsection{Situación actual}\label{subsec:actual}
+
+Actualmente se puede apreciar una disminución en el número de accidentes viales debido a
+una política para identificar el uso y consumo ilegal de bebidas alcohólicas al conducir.
+No obstante, a partir del 2015 el numero de accidentes automovolísticos letales ha comenzado
+a aumentar. Esto puede ser producto de la reciente alta adopción de tecnologías celulares en la Zona
+Metropolitana de Guadalajara. En el año 2015 el porcentaje de usuarios de tecnología celular en Jalisco
+era del 76.32\%. Esta cifra aumentó a 81.80\% en 2016. La figura \ref{fig:tipo_celular} muestra la
+proporción de celulares comúnes y smartphones.
+
+
+	\begin{figure}[H]\centering
+	\includegraphics[width=0.6\textwidth]{resources/img/tipo_de_celular.png}
+	\caption{\label{fig:tipo_celular} Crecimiento del Smartphone. Fuente: Elaboración propia}
+    \end{figure}
+
+La adopción de smartphones ha aumentado durante el periodo del 2015 al 2016 desde
+el 69.8\% hasta el 82.2\%. En recientes estudios, la Organización Mundial de la Salud ha identificado
+el uso del celular como un alto factor de riesgo al conducir debido a que genera distracciones
+visuales, cognitivas, físicas y auditivas.
+
+Por otra parte, la Secretaría de Movilidad identificó en 2016 el porcentage de conductores afectados
+por distacciones de celular en distintos municipios pertenecientes a la Zona Metropolitana de Guadalajara.
+El promedio de la Zona indica que al menos 60\% de los conductores se ven afectados por este tipo
+de distracciones al conducir.
+
+	\begin{figure}[H]\centering
+	\includegraphics[width=0.6\textwidth]{resources/img/manejo_con_celular.png}
+	\caption{\label{fig:tipo_celular} Uso de celular al conducir. Fuente: Elaboración propia}
+    \end{figure}
+
+Aunado a esto, el parque vehícular en el estado de Jalisco tiene una tendencia alcista. Esto significa que el número
+de vehículos en circulación está en aumento. Tomando en consideración que la adopción de Smartphones
+también presenta una tendencia a la alta y está fuertemente correlacionada con accidentes automovilísticos,
+la seguirdad víal puede verse afectada de forma relevante.
+
+	\begin{figure}[H]\centering
+	\includegraphics[width=1\textwidth]{resources/img/parque_vehicular.png}
+	\caption{\label{fig:parque_vehicular} Vehículos en circulación. Fuente: Elaboración propia}
+    \end{figure}
+
+
+
 \subsection{Situación con proyecto}
+
+
 
 \subsection{Análisis Costo-Beneficio}
 % * <rohdzmota@gmail.com> 2018-02-17T00:17:19.479Z:
