add todos and change objectives

--- a/main.tex
+++ b/main.tex
@@ -172,7 +172,7 @@ de los problemas.
 
 Usando como referencia el árbol de objetivos (figura \ref{fig:arbol_obj}) presentado anteriormente, se propone el siguiente objetivo general:
 
-\forceindent \textit{Mejorar la calidad de vida de los ciudadanos a través de la disminución de accidentes automovilísticos en la
+\forceindent \textit{Mejorar la calidad de vida de los ciudadanos a través de la disminución de accidentes automovilísticos letales en la
 Zona Metropolitana de Guadalajara.}
 
 El componente medular de este objetivo reconoce que parte del bienestar social es afectado directamente por los accidentes automovilísticos. Este problema tiene el potencial de agravarse sustancialmente con el crecimiento urbano de la ZMG si no se toman las medidas y políticas adecuadas. En este sentido, se pretende analizar información pública disponible para encontrar la relación entre los accidentes viales y las acciones que se pueden llevar a cabo de forma preventiva. Entre estas acciones se identifican políticas públicas y programas sociales con la intención de generar un impacto positivo y benéfico para la sociedad. 
@@ -183,7 +183,7 @@ Actualmente se tiene evidencia de casos de éxito respecto a programas sociales 
 
 Se propone el siguiente objetivo específico:
 
-\forceindent \textit{Disminuir el número de accidentes automovilísticos en la Zona Metropolitana de Guadalajara mediante un esquema de incentivos orientado al uso apropiado del celular.}
+\forceindent \textit{Disminuir el número de accidentes automovilísticos letales en la Zona Metropolitana de Guadalajara mediante un esquema de incentivos orientado al uso apropiado del celular.}
 
 Este objetivo se deriva directamente de la parte inferior del árbol en la figura \ref{fig:arbol_obj}. La intención es atender de forma particular y precisa una de las causas más relevantes de la problemática. Esto con el afán de generar un impacto de alto grado y contribuir de una forma más significativa al objetivo general. En particular, se seleccionó este objetivo específico puesto que el uso inadecuado de tecnología celular en zonas urbanas ha presentado una tendencia alcista alarmante.
 
@@ -285,10 +285,20 @@ la seguirdad víal puede verse afectada de forma relevante.
 	\caption{\label{fig:parque_vehicular} Vehículos en circulación. Fuente: Elaboración propia}
     \end{figure}
 
+\subsubsection{Definición de indicadores}
+
+[TODO: definir indicador para objetivo general y 3 para el objectivo específicio]]
+
+\subsubsection{Pronósitico de la adopción de tecnología celular}
+
+[TODO: Usar método exponencial]
+
+\subsubsection{Pronósitico del crecimiento del parque vehicular}
+
+[TODO: Usar cadenas de markov]
 
 
 \subsection{Situación con proyecto}
-
 
 
 \subsection{Análisis Costo-Beneficio}
