--- a/main.tex
+++ b/main.tex
@@ -272,7 +272,7 @@ de distracciones al conducir.
 
 	\begin{figure}[H]\centering
 	\includegraphics[width=0.6\textwidth]{resources/img/manejo_con_celular.png}
-	\caption{\label{fig:tipo_celular} Uso de celular al conducir. Fuente: Elaboración propia}
+	\caption{\label{fig:manejo_celular} Uso de celular al conducir. Fuente: Elaboración propia}
     \end{figure}
 
 Aunado a esto, el parque vehícular en el estado de Jalisco tiene una tendencia alcista. Esto significa que el número
